@@ -1,3 +1,8 @@
+2005-01-05  Mark Mitchell  <mark@codesourcery.com>
+
+	* testsuite/27_io/basic_filebuf/open/char/9507.cc: Remove child
+	process.
+	
 2005-01-05  Paolo Carlini  <pcarlini@suse.de>
 
 	* src/istream.cc (basic_istream<char>::ignore(streamsize),
